using scss and compressed
added gem file
moved js to standard location

--- a/_layouts/lptemplate2.html
+++ b/_layouts/lptemplate2.html
@@ -15,7 +15,7 @@
         }
     </script>
     <script src='//cdn.clkmc.com/cmc.js'></script>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="/assets/css/lptemplate2.css">
 </head>
 <body>
 <div class="main-body">
@@ -58,6 +58,6 @@
     <a class="tnc-link" href="{{ page.termsLink }}" title="" target="_blank"
        rel="noopener"><span>Terms</span></a>
 </div>
-<script src="../app.js"></script>
+<script src="/assets/js/app.js"></script>
 </body>
 </html>
