--- a/_layouts/lptemplate2.html
+++ b/_layouts/lptemplate2.html
@@ -31,6 +31,7 @@
         <a class="cta" href="{{ page.vendorHopLink }}"
            target="_top">
             <img class="lander-img" src="lander_image.jpg">
+            <img class="play-btn" src="../assets/images/play-button.png">
         </a>
     </div>
     <!-- Paragraph -->
