--- a/_layouts/lptemplate1.html
+++ b/_layouts/lptemplate1.html
@@ -1,10 +1,21 @@
+<!--required resources:
+
+- lander_image.jpg
+- index.html with these inputs:
+    title, headingLine, vendorHopLink, cmcProject, cmcHid, cmcUid, privacyLink, termsLink, content
+
+required remote resources:
+- https://vitalityglow.life/lib/assets/js/app-1.0.js
+- https://vitalityglow.life/lib/assets/images/favicon.png
+- https://vitalityglow.life/lib/assets/css/spinner-1.css
+-->
 <!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="icon" type="image/x-icon" href="{{ page.faviconLink | default: '../favicon.png' }}">
-    <link rel="stylesheet" href="../assets/css/spinner.css">
+    <link rel="icon" type="image/x-icon" href="https://vitalityglow.life/lib/assets/images/favicon.png">
+    <link rel="stylesheet" href="https://vitalityglow.life/lib/assets/css/spinner-1.css">
     <script>
         window.clickmagick_cmc = {
             uid: '{{ page.cmcUid }}',
@@ -14,6 +25,7 @@
             vid_info: 'on',
         }
     </script>
+    <script src='//cdn.clkmc.com/cmc.js'></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -191,7 +203,6 @@
 
         /*endregion*/
     </style>
-    <script src='//cdn.clkmc.com/cmc.js'></script>
 </head>
 <body>
 <div class="main-body">
@@ -241,6 +252,6 @@
     <a class="tnc-link" href="{{ page.termsLink }}" title="" target="_blank"
        rel="noopener"><span>Terms</span></a>
 </div>
-<script src="../assets/js/app.js"></script>
+<script src="https://vitalityglow.life/lib/assets/js/app-1.0.js"></script>
 </body>
 </html>
